# Clarry

./: .gitignore  Cargo.toml  Leptos.toml  README.md  STRUCTURAL_PRIMITIVES.md  build.rs  dev_server.sh  min-exp.txt  min-out.txt  run_dev.rs  run_server.sh  watch_and_serve.sh
examples/: structural_primitives.rs
src/: api.rs  lib.rs  main.rs  page_loader.rs
src/data/: app_data.rs
src/pages/: chat.rs  dashboard.rs  demo.rs  feed.rs  mod.rs  shop.rs  twitter.rs
src/pages/instagram/: create.rs  edit.rs  explore.rs  home.rs  instagram.rs  messages.rs  messages_detail.rs  notifications.rs  post.rs  profile.rs  reels.rs  saved.rs  story.rs  tagged.rs
src/tokens/: action.rs  animation.rs  async_resource.rs  builders.rs  debug.rs  islands.rs  kv_cache.rs  mod.rs  node.rs  prelude.rs  reactive.rs  render.rs  schema.rs  storage.rs  store.rs  structural.rs
src/tokens/action/: builder.rs  registry.rs  types.rs  web.rs
src/tokens/builders/: factory.rs  ig_shared.rs  input.rs  page_config.rs  spec.rs  store_controls.rs  types.rs  ui.rs
src/tokens/core/: id.rs  mod.rs  types.rs
src/tokens/render/: dom.rs  element.rs  executor.rs  hydration.rs  pipeline.rs
src/tokens/storage/: backends.rs  entry.rs  file.rs  list.rs  manager.rs  nested.rs  primitive.rs
